Flush QLocalSocket in QMic plugin

BUG: 382491